# newsguard

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  schema.sql  test_channel.py
newsguard/: __init__.py  config.py  db.py  digest.py  embedder.py  extractor.py  fetcher.py  judge.py  llm.py  retriever.py  scorer.py  worker.py
